--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,4 +1,8 @@
- [mod-setting-name]
+[mod-setting-name]
+custom-map-colors-preset=Entity color palette
+custom-map-colors-monochrome=Monochrome factory color
+custom-map-colors-map-tiles-preset=Map tile color palette
+custom-map-colors-map-tiles-multiplier=Map tile saturation multiplier
 use-custom-default-friendly-color=Use custom default entity color
 custom-default-friendly-color=Custom default entity color
 use-custom-transport-belt-color=Use custom transport belt color
@@ -13,8 +17,8 @@ use-custom-assembling-machine-color=Use custom assembling machine color
 custom-assembling-machine-color=Custom assembling machine color
 use-custom-chemical-plant-color=Use custom chemical plant color
 custom-chemical-plant-color=Custom chemical plant color
-use-custom-refinery-color=Use custom refinery color
-custom-refinery-color=Custom refinery color
+use-custom-oil-refinery-color=Use custom refinery color
+custom-oil-refinery-color=Custom refinery color
 use-custom-furnace-color=Use custom furnace color
 custom-furnace-color=Custom furnace color
 use-custom-lab-color=Use custom lab color
@@ -59,65 +63,89 @@ use-custom-vehicle-inner-color=Use custom vehicle fill color
 custom-vehicle-inner-color=Custom vehicle fill color
 use-custom-rail-color=Use custom rail color
 custom-rail-color=Custom rail color
+use-custom-ammo-turret-color=Use custom gun turret color
+custom-ammo-turret-color=Custom gun turret color
+use-custom-electric-turret-color=Use custom laser turret color
+custom-electric-turret-color=Custom laser turret color
+use-custom-fluid-turret-color=Use custom flamethrower turret color
+custom-fluid-turret-color=Custom flamethrower turret color
+use-custom-wall-color=Use custom wall color
+custom-wall-color=Custom wall color
+use-custom-gate-color=Use custom gate color
+custom-gate-color=Custom gate color
 
 [mod-setting-description]
+custom-map-colors-preset=Some starting points for custom factory colors. \nIncludes entities and path tiles. \nIndividual colors can be overridden with the settings below.
+custom-map-colors-monochrome=If the monochrome preset is selected, input a color here to tint the entire factory that color
+custom-map-colors-map-tiles-preset=A few selections for map tile color palettes.
+custom-map-colors-map-tiles-multiplier=Value from 0-10. \n Used with the Default 0.17 preset to change the overall saturation.
 use-custom-default-friendly-color=Set your default color for all entities of your force
-custom-default-friendly-color=Input a hex value. Default: 006192
+custom-default-friendly-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 006192
 use-custom-transport-belt-color=Set a custom color for transport belts, underground belts, and splitters
-custom-transport-belt-color=Input a hex value. Default: faba00
+custom-transport-belt-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: faba00
 use-custom-fast-transport-belt-color=Set a custom color for fast transport belts, fast underground belts, and fast splitters
-custom-fast-transport-belt-color=Input a hex value. Default: fa450e
+custom-fast-transport-belt-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: fa450e
 use-custom-express-transport-belt-color=Set a custom color for express transport belts, express underground belts, and express splitters
-custom-express-transport-belt-color=Input a hex value. Default: 36c9ff
+custom-express-transport-belt-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 36c9ff
 use-custom-pipe-color=Set a custom color for pipes, underground pipes, pumps, and tanks
-custom-pipe-color=Input a hex value. Default: b429ff
+custom-pipe-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: b429ff
 use-custom-assembling-machine-color=Set a custom color for all assembling machines
-custom-assembling-machine-color=Input a hex value. Default: 0086c9
+custom-assembling-machine-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 0086c9
 use-custom-chemical-plant-color=Set a custom color for chemical plants
-custom-chemical-plant-color=Input a hex value. Default: 4bc04b
-use-custom-refinery-color=Set a custom color for refineries
-custom-refinery-color=Input a hex value. Default: 328032
+custom-chemical-plant-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 4bc04b
+use-custom-oil-refinery-color=Set a custom color for refineries
+custom-oil-refinery-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 328032
 use-custom-furnace-color=Set a custom color for furnaces
-custom-furnace-color=Input a hex value. Default: ffa826
+custom-furnace-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: ffa826
 use-custom-lab-color=Set a custom color for labs
-custom-lab-color=Input a hex value. Default: ff90bd
+custom-lab-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: ff90bd
 use-custom-rocket-silo-color=Set a custom color for rocket silos
-custom-rocket-silo-color=Input a hex value. Default: 2b4544
+custom-rocket-silo-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 2b4544
 use-custom-beacon-color=Set a custom color for all beacons
-custom-beacon-color=Input a hex value. Default: 008192
+custom-beacon-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 008192
 use-custom-centrifuge-color=Set a custom color for centrifuges
-custom-centrifuge-color=Input a hex value. Default: 40ff40
+custom-centrifuge-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 40ff40
 use-custom-reactor-color=Set a custom color for all reactors
-custom-reactor-color=Input a hex value. Default: 2aba25
+custom-reactor-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 2aba25
 use-custom-heat-pipe-color=Set a custom color for all heat pipes
-custom-heat-pipe-color=Input a hex value. Default: 8e0000
+custom-heat-pipe-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 8e0000
 use-custom-boiler-color=Set a custom color for all boilers and heat exchangers
-custom-boiler-color=Input a hex value. Default: 00008c
+custom-boiler-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 00008c
 use-custom-generator-color=Set a custom color for all steam engines and turbines
-custom-generator-color=Input a hex value. Default: 005926
+custom-generator-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 005926
 use-custom-electric-pole-color=Set a custom color for all electric poles
-custom-electric-pole-color=Input a hex value. Default: eeee29
+custom-electric-pole-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: eeee29
 use-custom-solar-panel-color=Set a custom color for all solar panels
-custom-solar-panel-color=Input a hex value. Default: 1f2124
+custom-solar-panel-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 1f2124
 use-custom-accumulator-color=Set a custom color for all accumulators
-custom-accumulator-color=Input a hex value. Default: 7a7a7a
+custom-accumulator-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 7a7a7a
 use-custom-radar-color=Set a custom color for all radars
-custom-radar-color=Input a hex value. Default: 7ce8c0
+custom-radar-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 7ce8c0
 use-custom-roboport-color=Set a custom color for all roboports
-custom-roboport-color=Input a hex value. Default: 4888e8
+custom-roboport-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 4888e8
 use-custom-stone-path-color=Set a custom color for stone paths
-custom-stone-path-color=Input a hex value. Default: 323232
+custom-stone-path-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 323232
 use-custom-concrete-color=Set a custom color for concrete
-custom-concrete-color=Input a hex value. Default: 646464
+custom-concrete-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 646464
 use-custom-hazard-concrete-color=Set a custom color for hazard concrete
-custom-hazard-concrete-color=Input a hex value. Default: 808000
+custom-hazard-concrete-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 808000
 use-custom-refined-concrete-color=Set a custom color for refined concrete 
-custom-refined-concrete-color=Input a hex value. Default: 969696
+custom-refined-concrete-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 969696
 use-custom-refined-hazard-concrete-color=Set a custom color for refined hazard concrete
-custom-refined-hazard-concrete-color=Input a hex value. Default: 808000
+custom-refined-hazard-concrete-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 808000
 use-custom-vehicle-outer-color=Set a custom color for the outline of cars and tanks
-custom-vehicle-outer-color=Input a hex value. Default: ff1a1a
+custom-vehicle-outer-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: ff1a1a
 use-custom-vehicle-inner-color=Set a custom color for the fill of cars and tanks
-custom-vehicle-inner-color=Input a hex value. Default: e6e6e6
+custom-vehicle-inner-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: e6e6e6
 use-custom-rail-color=Set a custom color for tracks
-custom-rail-color=Input a hex value. Default: 9fcacc
+custom-rail-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 9fcacc
+use-custom-ammo-turret-color=Set a custom color for gun turrets
+custom-ammo-turret-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: caa718
+use-custom-electric-turret-color=Set a custom color for laser turrets
+custom-electric-turret-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: d92e2e
+use-custom-fluid-turret-color=Set a custom color for flamethrower turrets
+custom-fluid-turret-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: eb7303
+use-custom-wall-color=Set a custom color for walls
+custom-wall-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: cddacd
+use-custom-gate-color=Set a custom color for gates
+custom-gate-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 808080
