--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -3,6 +3,7 @@ custom-map-colors-preset=Entity color palette
 custom-map-colors-monochrome=Monochrome factory color
 custom-map-colors-map-tiles-preset=Map tile color palette
 custom-map-colors-map-tiles-multiplier=Map tile saturation multiplier
+use-custom-map-colors-fancy-trees=Use fancy tree colors
 use-custom-default-friendly-color=Use custom default entity color
 custom-default-friendly-color=Custom default entity color
 use-custom-transport-belt-color=Use custom transport belt color
@@ -77,8 +78,9 @@ custom-gate-color=Custom gate color
 [mod-setting-description]
 custom-map-colors-preset=Some starting points for custom factory colors. \nIncludes entities and path tiles. \nIndividual colors can be overridden with the settings below.
 custom-map-colors-monochrome=If the monochrome preset is selected, input a color here to tint the entire factory that color
-custom-map-colors-map-tiles-preset=A few selections for map tile color palettes.
-custom-map-colors-map-tiles-multiplier=Value from 0-10. \n Used with the Default 0.17 preset to change the overall saturation.
+custom-map-colors-map-tiles-preset=A few selections for map tile color palettes
+custom-map-colors-map-tiles-multiplier=Value from 0-10. \n Used with the Default 0.17 preset to change the overall saturation
+use-custom-map-colors-fancy-trees=Makes tree map colors more closely match their leaf colors
 use-custom-default-friendly-color=Set your default color for all entities of your force
 custom-default-friendly-color=Input a hex (000000) or decimal (rrr.ggg.bbb) color value. Default: 006192
 use-custom-transport-belt-color=Set a custom color for transport belts, underground belts, and splitters
