--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,3 +1,48 @@
+[custom-map-colors]
+map-legend-color=[color=__1__, __2__, __3__]■[/color]
+pipe=Pipes, Pumps, and Storage Tanks
+pipe-to-ground=Underpipes
+pump=Pumps
+storage-tank=Storage Tanks
+
+rocket-silo=Rocket Silo
+heat-pipe=Heat Pipes
+beacon=Beacons
+generator=Steam Engines and Turbines
+roboport=Roboports
+solar-panel=Solar Panels
+accumulator=Accumulators
+ammo-turret=Gun Turrets
+fluid-turret=Flamethrower Turrets
+electric-turret=Laser Turrets
+wall=Walls
+gate=Gates
+assembling-machine=Assembling Machines
+furnace=Furnaces
+lab=Labs
+reactor=Nuclear Reactors
+boiler=Boilers
+electric-pole=Electric Poles
+radar=Radars
+chemical-plant=Chemical Plants
+oil-refinery=Refineries
+centrifuge=Centrifuges
+transport-belt=Transport Belts
+fast-transport-belt=Fast Transport Belts
+express-transport-belt=Express Transport Belts
+stone-path=Stone Bricks
+concrete=Concrete
+hazard-concrete=Hazard Concrete
+refined-concrete=Refined Concrete
+refined-hazard-concrete=Refined Hazard Concrete
+rail=Rails
+vehicle_outer=Vehicle outlines
+vehicle_inner=Vehicle fills
+default_friendly=Other entities
+
+
+
+
 [mod-setting-name]
 custom-map-colors-preset=Entity color palette
 custom-map-colors-monochrome=Monochrome factory color
