--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,10 +1,15 @@
+[shortcut-name]
+cmc_toggle_map_legend_shortcut=Toggle map legend
+
+[controls]
+cmc_toggle_map_legend=Toggle map legend
+
 [custom-map-colors]
 map-legend-color=[color=__1__, __2__, __3__]■[/color]
 pipe=Pipes, Pumps, and Storage Tanks
 pipe-to-ground=Underpipes
 pump=Pumps
 storage-tank=Storage Tanks
-
 rocket-silo=Rocket Silo
 heat-pipe=Heat Pipes
 beacon=Beacons
@@ -39,6 +44,7 @@ rail=Rails
 vehicle_outer=Vehicle outlines
 vehicle_inner=Vehicle fills
 default_friendly=Other entities
+map-legend=Map Legend
 
 
 
